my-app/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: sa.homework
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            serviceName: my-app-service
            servicePort: 5000
